Part 1/Exercise 1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-svc
spec:
  type: ClusterIP
  selector:
    app: timestamp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
